--- a/Assignment_pgm_24/pgm24.ipynb
+++ b/Assignment_pgm_24/pgm24.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9f180513",
+   "id": "8a4e37bf",
    "metadata": {},
    "source": [
     "# Question1\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8169f998",
+   "id": "7c96c6ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b3513f71",
+   "id": "dc9afb38",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7f4dedd5",
+   "id": "5898d3eb",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "979ed667",
+   "id": "5c43a66a",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9aa91b1",
+   "id": "5840867c",
    "metadata": {},
    "source": [
     "# Question2\n",
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "aa038676",
+   "id": "56b456ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "046ad74d",
+   "id": "83238dc2",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "06d21fdc",
+   "id": "6d2ed784",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0b9d548c",
+   "id": "3648be44",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "596550bf",
+   "id": "cbe0a7b4",
    "metadata": {},
    "source": [
     "# Question3\n",
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "de38470b",
+   "id": "94567419",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "01d4794d",
+   "id": "bddb80bc",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "0d5f03e6",
+   "id": "dca35ef8",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5500de01",
+   "id": "f400a015",
    "metadata": {},
    "source": [
     "# Question4\n",
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "d1e45b98",
+   "id": "2b8a4dea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "d9f0ea4d",
+   "id": "daa57e7a",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "ccad9194",
+   "id": "764cb2ff",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "43f9f884",
+   "id": "1ef48ed6",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0842549",
+   "id": "29d87772",
    "metadata": {},
    "source": [
     "# Question5\n",
@@ -376,8 +376,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2fd06891",
+   "execution_count": 40,
+   "id": "5e1edbe9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,9 +387,84 @@
     "    l.append(n2)\n",
     "    l.append(n3)\n",
     "    \n",
-    "    \n",
+    "    l = sorted(l)\n",
+    "    if l[2]**2 == (l[0]**2 + l[1]**2):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "21d0b18f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_triplet(3, 4, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "70480ad5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_triplet(13, 5, 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "a7a2fbc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_triplet(1, 2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2b98a21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
